--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,6 @@ html {
 
 :root {
   --backgroundColor: #f8fafc;
-  --textColor: #334155;
-
-  --shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.05),
-    0 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
 body {
@@ -44,26 +40,6 @@ h5 {
   text-transform: capitalize;
 }
 
-h1 {
-  font-size: 3.052rem;
-}
-
-h2 {
-  font-size: 2.441rem;
-}
-
-h3 {
-  font-size: 1.953rem;
-}
-
-h4 {
-  font-size: 1.563rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-}
-
 a {
   text-decoration: none;
 }
@@ -73,10 +49,102 @@ ul {
   padding: 0;
 }
 
-.img {
-  width: 100%;
-  display: block;
-  object-fit: cover;
-}
-
 /* ============= PROJECT CSS =============== */
+
+.menu {
+  --accent-color: #f59e0b;
+  --textColor: #0f172a;
+
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3rem;
+
+  h2 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+    letter-spacing: 1px;
+    font-weight: 400;
+  }
+
+  .under {
+    background-color: var(--accent-color);
+    width: 7rem;
+    height: 4px;
+    margin-bottom: 1.5rem;
+  }
+
+  .buttonsContainer {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 2rem;
+
+    button {
+      padding: 0.375rem 0.75rem;
+      border-radius: 4px;
+      border: none;
+      background-color: var(--accent-color);
+      color: white;
+      box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.06),
+        0 1px 3px 0 rgba(0, 0, 0, 0.1);
+      text-transform: capitalize;
+    }
+  }
+
+  .menuContainer {
+    max-width: 1120px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1.5rem;
+    align-items: start;
+
+    .dish {
+      background-color: white;
+      border-radius: 4px;
+
+      .img {
+        width: 100%;
+        display: block;
+        object-fit: cover;
+        height: 240px;
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+      }
+
+      .infoContainer {
+        padding: 1.5rem;
+
+        .titleContainer {
+          display: flex;
+          justify-content: space-between;
+          align-items: start;
+          gap: 0.5rem;
+          margin-bottom: 1rem;
+
+          h5 {
+            font-size: 1.25rem;
+            font-weight: 500;
+            line-height: 1.25rem;
+            letter-spacing: 1px;
+          }
+
+          .price {
+            background-color: var(--accent-color);
+            padding: 0.25rem 0.5rem;
+            border-radius: 4px;
+            color: white;
+            font-weight: 400;
+            letter-spacing: 1px;
+          }
+        }
+
+        .description {
+          font-weight: 400;
+          line-height: 1.5rem;
+          color: #64748b;
+        }
+      }
+    }
+  }
+}
