--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,7 @@ ul {
       box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.06),
         0 1px 3px 0 rgba(0, 0, 0, 0.1);
       text-transform: capitalize;
+      cursor: pointer;
     }
   }
 
